@@ -13,6 +13,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN branch-5-2)
 --------------------------------
 
+- mapowscommon.c: output version string correctly (#2821)
+
 Version 5.2.1 (2008-12-01):
 ---------------------------
 
